# Mage

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.MD  README.MD
Assets/Shaders/: ao.rgen  ao.rmiss  ao_primary.rchit  ao_shared.h
CMake/: LICENSE
Includes/: LICENSE  glsl_cpp_common.h  tinyobj_loader_opt.hpp
Sources/: Application.cppm  Mage.cpp  Physics-Types.cppm  Physics.cppm  Vulkan-Error.cppm  Vulkan-Macros.cppm  Vulkan.cppm  Window.cppm
